resources/css/app.css
:root {
    --gray1: #2d2d2d;
    --gray2: #3f3f3f;
    --gray3: #828282;
    --gray4: #BDBDBD;
    --gray5: #f2f6fa;
    --gray6: #F2F6FA;
    --blue1: #2F80ED;
    --blue2: #23508a;
    --red: #EB5757;
    --green1: #219653;
    --green2: #27AE60;
    --green3: #6FCF97;
}
* {
    transition: all .3s ease;
    font-family: "Montserrat", sans-serif;
    box-sizing: border-box;
}

body {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0;
    padding: 0;
    background-color: var(--gray6);
    color: black;
}
#app {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0;
    min-height: 100vh;
    top: 0;
    width: 100%;
    max-width: 100vw;
}
.fade-enter-active, .fade-leave-active {
    transition: opacity 0.3s ease;
}
.fade-enter-from, .fade-leave-to {
    opacity: 0;
}
h1, h2, h3, h4, h5, h6, p {
    margin: 0;
}
h2.title, h3.title, h4.title {
    font-weight: 500;
}
p.error {
    font-size: 12px;
    color: var(--red);
    word-wrap: break-word;
    max-width: inherit;
}
input.error {
    color: var(--red) !important;
    border-color: var(--red) !important;
}
input.error::placeholder {
    color: var(--red);
}
button.primary {
    background-color: var(--blue1);
    border: none;
    border-radius: 15px;
    color: white;
    padding: 10px 20px;
    cursor: pointer;
    outline: none;
}
button:hover, a:hover {
    opacity: .7;
}
button:disabled {
    pointer-events: none;
    opacity: .7;
}
a {
    text-decoration: none;
    color: black;
    cursor: pointer;
}
.option {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.5s ease;
}
.option.opened {
    max-height: 1000px;
}
.pagination-container {
    display: flex;
    column-gap: 10px;
    margin: 0;
}
.paginate-buttons {
    height: 35px;
    width: 35px;
    border-radius: 5px;
    cursor: pointer;
    background-color: white;
    border: 1px solid var(--gray4);
    color: black;
    outline: none;
}
.paginate-buttons:hover {
    opacity: .7;
}
.active-page {
    background-color: var(--blue1);
    border: 1px solid var(--blue1);
    color: white;
}
.active-page:hover {
    background-color: var(--blue1);
}
form.validation {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    position: relative;
    width: 300px;
    div.form-input {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 5px;
        position: relative;
        width: 100%;
        input {
            border: 1px solid var(--gray4);
            border-radius: 15px;
            padding: 10px 20px;
            outline: none;
            position: relative;
            width: 100%;
        }
        input:focus {
            border-color: var(--blue1);
        }
        svg.password-show {
            position: absolute;
            right: 10px;
            top: 50%;
            transform: translateY(-50%);
            cursor: pointer;
            path {
                stroke: var(--gray4);
            }
        }
        svg.password-show.active {
            path {
                stroke: var(--gray3);
            }
        }
    }
}

